--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,123 @@
    "id": "0ea264c2",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483eb816",
+   "metadata": {},
+   "source": [
+    "### 2.1.10 - *Pour pouvoir comparer avec les résultats de l’article, entrainer cette fois-ci, un classeur multi-classes en ajoutant la classe « neutre » tout en répétant les étapes précédentes : 2-1-2 à 2-1-9. (6 points)*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11ecc96a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data.load_data import load_data\n",
+    "import pandas as pd\n",
+    "\n",
+    "test, train = load_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dbba591",
+   "metadata": {},
+   "source": [
+    "### scénario 1: les variables « features » sont constituées uniquement de mots de longueur 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86bdd9fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0e648d",
+   "metadata": {},
+   "source": [
+    "### scénario 2: les variables « features » sont constituées uniquement de mots de longueur 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "127203a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a9bf11d",
+   "metadata": {},
+   "source": [
+    "### scénario 3: les variables sont les patterns de mots les plus fréquents. Réutiliser le concept de pattern définit dans l’article,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50984f63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cbfaed0",
+   "metadata": {},
+   "source": [
+    "### Scénario 4 : les variables regroupent l’ensemble des sénarios a), b) et c) : les mots, les 2-gram et les patterns (scénario de l’article)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acc9773f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4724284",
+   "metadata": {},
+   "source": [
+    "### 2.1.11 - *Une fois l’étude (2.1.1 à 2.1.10) est réalisée et démontrée, choisissez un des classeurs (binaire ou ternaire) pour intégrer un filtre de Bloom à la place d’un HashingTF. Vous pouvez réutiliser n’importe quel code trouvé sur le net pour implémenter le filtre de Bloom ! À condition qu’il faut le comprendre et le commenter (1 point).*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb84789a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96a21cc1",
+   "metadata": {},
+   "source": [
+    "### 2.1.12 - *Comparer les deux classeurs en question. Est-ce que cette intégration du filtre de Bloom a un impact sur les résultats déjà obtenus avec le classeur que vous avez choisi, en termes d’accuracy, temps d’entrainement et de passage à l’échelle. Tracez les courbes du nouveau classeur basé sur le filtre de Boom. (1 point)*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a70babb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
